--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^2.17.2",
+    "@reown/appkit": "^1.7.15",
+    "@reown/appkit-adapter-ethers": "^1.7.15",
+    "@reown/appkit-adapter-wagmi": "^1.7.15",
+    "@wagmi/core": "^2.15.6",
+    "@wagmi/connectors": "^5.8.5",
     "ethers": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "viem": "^2.31.4"
+    "viem": "^2.31.4",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
